# example-django

./: README.md  justfile  pyproject.toml
config/: settings.py
