[tool.poetry]
name = "example-django"
version = "0.1.0"
description = "Simple Django project for learning"
authors = ["Michael Savin <jtprogru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
